force-app/main/default/objects/Medical_Insight__c/Medical_Insight__c.object-meta.xml
<CustomObject>
    <description>Stores medical insights gathered from various sources</description>
    <label>Medical Insight</label>
    <nameField>
        <displayFormat>MI-{0000}</displayFormat>
        <label>Medical Insight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Insights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject> 