force-app/main/default/objects/Medical_Insight__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The HCP providing the insight.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Medical Insights</relationshipLabel>
    <relationshipName>Medical_Insights</relationshipName>
    <type>Lookup</type>
</CustomField> 