force-app/main/default/objects/Medical_Insight__c/fields/Captured_By__c.field-meta.xml
<CustomField>
    <fullName>Captured_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MSL or field user who logged it</description>
    <label>Captured By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Medical Insights</relationshipLabel>
    <relationshipName>Medical_Insights</relationshipName>
    <type>Lookup</type>
</CustomField> 