force-app/main/default/objects/Medical_Insight__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>When insight was gathered</description>
    <label>Date</label>
    <type>Date</type>
</CustomField> 