force-app/main/default/objects/Medical_Insight__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <description>Full-text of the insight</description>
    <label>Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField> 