force-app/main/default/objects/Medical_Insight__c/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <description>Action or follow-up required</description>
    <label>Follow Up</label>
    <type>TextArea</type>
</CustomField> 