force-app/main/default/objects/Medical_Insight__c/fields/Relevance_Score__c.field-meta.xml
<CustomField>
    <fullName>Relevance_Score__c</fullName>
    <description>Optional: AI score or manual input</description>
    <label>Relevance Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField> 