force-app/main/default/objects/Medical_Insight__c/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <description>User-tagged sentiment</description>
    <label>Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 