force-app/main/default/objects/Medical_Insight__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Brief summary of the insight</description>
    <label>Summary</label>
    <type>TextArea</type>
</CustomField> 