force-app/main/default/objects/Medical_Insight__c/fields/Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area__c</fullName>
    <description>E.g., Rheumatology, Oncology</description>
    <label>Therapeutic Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rheumatology</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Endocrinology</fullName>
            </value>
            <value>
                <fullName>Gastroenterology</fullName>
            </value>
            <value>
                <fullName>Hematology</fullName>
            </value>
            <value>
                <fullName>Infectious Disease</fullName>
            </value>
            <value>
                <fullName>Pulmonology</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Immunology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 