force-app/main/default/objects/Medical_Insight__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <description>Theme of the insight (e.g., Safety Concern, Off-label Use)</description>
    <label>Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 